--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['1.20', '1.21']
+        go-version: ['1.23.2']
         platform: ['linux/amd64', 'darwin/amd64', 'darwin/arm64', 'windows/amd64']
         include:
           - platform: 'linux/amd64'
@@ -36,12 +36,13 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@v5
       with:
         go-version: ${{ matrix.go-version }}
+        cache: true # Enable Go module caching
 
     - name: Get dependencies
       run: go mod download
@@ -54,7 +55,7 @@ jobs:
         GOOS=${{ matrix.osname }} GOARCH=${{ matrix.arch }} go build -v -o matrix-helper-${{ matrix.osname }}-${{ matrix.arch }}${{ matrix.extension }} ./cmd/main.go
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4 
       with:
         name: matrix-helper-${{ matrix.osname }}-${{ matrix.arch }}
         path: matrix-helper-${{ matrix.osname }}-${{ matrix.arch }}${{ matrix.extension }}
@@ -64,12 +65,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: startsWith(github.ref, 'refs/tags/v')
+    permissions: 
+      contents: write
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Download all artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           path: artifacts
 
@@ -84,7 +87,7 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v2 
         with:
           files: |
             release/*
