--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: ['1.23.2']
+        go-version: ['1.24']
         platform: ['linux/amd64', 'darwin/amd64', 'darwin/arm64', 'windows/amd64']
         include:
           - platform: 'linux/amd64'
@@ -42,7 +42,11 @@ jobs:
       uses: actions/setup-go@v5
       with:
         go-version: ${{ matrix.go-version }}
-        cache: true # Enable Go module caching
+        cache: true
+
+    - name: Read version
+      id: version
+      run: echo "VERSION=$(cat VERSION)" >> $GITHUB_OUTPUT
 
     - name: Get dependencies
       run: go mod download
@@ -52,10 +56,12 @@ jobs:
 
     - name: Build binary
       run: |
-        GOOS=${{ matrix.osname }} GOARCH=${{ matrix.arch }} go build -v -o matrix-helper-${{ matrix.osname }}-${{ matrix.arch }}${{ matrix.extension }} ./cmd/main.go
+        GOOS=${{ matrix.osname }} GOARCH=${{ matrix.arch }} go build -v \
+          -ldflags "-X main.version=${{ steps.version.outputs.VERSION }}" \
+          -o matrix-helper-${{ matrix.osname }}-${{ matrix.arch }}${{ matrix.extension }} ./cmd/main.go
 
     - name: Upload artifact
-      uses: actions/upload-artifact@v4 
+      uses: actions/upload-artifact@v4
       with:
         name: matrix-helper-${{ matrix.osname }}-${{ matrix.arch }}
         path: matrix-helper-${{ matrix.osname }}-${{ matrix.arch }}${{ matrix.extension }}
@@ -65,11 +71,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     if: startsWith(github.ref, 'refs/tags/v')
-    permissions: 
+    permissions:
       contents: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+
+      - name: Read version
+        id: version
+        run: echo "VERSION=$(cat VERSION)" >> $GITHUB_OUTPUT
 
       - name: Download all artifacts
         uses: actions/download-artifact@v4
@@ -87,8 +97,9 @@ jobs:
 
       - name: Create Release
         id: create_release
-        uses: softprops/action-gh-release@v2 
+        uses: softprops/action-gh-release@v2
         with:
+          name: v${{ steps.version.outputs.VERSION }}
           files: |
             release/*
           draft: false
